add how it works to title

--- a/i18n/dapp.en.i18n.json
+++ b/i18n/dapp.en.i18n.json
@@ -2,7 +2,7 @@
 	"dapp": {
 		"app": {
 			"title": "PeopleCoin",
-			"what": "What is this?"
+			"what": "How it Works"
 			, "buttons": {
 				"search": "Search"
 				, "account": "My Account"
