add explanation for home page

--- a/app/i18n/dapp.en.i18n.json
+++ b/app/i18n/dapp.en.i18n.json
@@ -10,6 +10,7 @@
 				, "top": "Top"
 				, "new": "New"
 				, "faq": "Frequently Asked Questions"
+				, "github": "Contribute on Github"
 				, "guide": "How it works"
 			}
 			, "headers": {
