add footer linking to github and discord

--- a/app/i18n/dapp.en.i18n.json
+++ b/app/i18n/dapp.en.i18n.json
@@ -11,6 +11,7 @@
 				, "new": "New"
 				, "faq": "Frequently Asked Questions"
 				, "github": "Contribute on Github"
+				, "discord": "Chat with us on Discord"
 				, "guide": "How it works"
 			}
 			, "headers": {
