add embedded view

--- a/app/i18n/dapp.en.i18n.json
+++ b/app/i18n/dapp.en.i18n.json
@@ -67,6 +67,10 @@
 				"placeholder" : "Search for a twitter handle..."
 			}
 		}
+		, "airtable": {
+			"title": "View"
+			, "defaultName": "View"
+		}
 		, "search": {
 			"title": "Search"
 			, "defaultName": "search"
